--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,1 +1,7 @@
-
+@font-face {
+    font-family: 'SpotMono';
+    src: url('SpotMono-Medium.woff2') format('woff2'),
+        url('SpotMono-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
