--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,56 @@
 * { margin:0; padding:0; } /* to remove the top and left whitespace */
 
-html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
+html, body { width:100%; height:100%; font-family: 'SpotMono', "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;} /* just to be sure these are full screen*/
 
 canvas { display:block; } /* To remove the scrollbars */
 
 h1 {font-family: 'SpotMono', "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;}
+
+#mailchimp {
+ background: #ffffff;
+ color: #3D6392;
+  text-align: center;
+  font-family: Roboto;
+	padding: 20px 15px;
+}
+
+#mailchimp h2 {
+  font-size: 30px;
+  line-height: 20px;
+  color:#7e4397;
+}
+
+#mailchimp p {
+  font-size: 17px;
+  line-height: 17px;
+  color: #333;
+}
+
+#mailchimp input {
+ border: medium none;
+ color: gray;
+ font-size: 14px;
+ border: 1px solid #dfdfdf;
+ margin-bottom: 10px;
+ padding: 8px 10px;
+ width: 35%;
+ border-radius: 4px;
+ -moz-border-radius: 4x;
+ -webkit-border-radius: 4px;
+}
+
+#mailchimp input.email { background: #fff }
+#mailchimp input.name { background: #fff}
+#mailchimp input[type="submit"] {
+ background: #90a00d;
+ color: #fff;
+ cursor: pointer;
+ font-size: 15px;
+ text-transform: uppercase;
+ width: 35%;
+ padding: 8px 0;
+}
+
+::-webkit-input-placeholder {
+   color: gray;
+}
