--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,11 @@ h1 {font-family: 'SpotMono', "Courier New", Courier, "Lucida Sans Typewriter", "
 #mailchimp input.email { background: #fff }
 #mailchimp input.name { background: #fff}
 #mailchimp input[type="submit"] {
- background: #90a00d;
+ background: blue;
  color: #fff;
  cursor: pointer;
  font-size: 15px;
- text-transform: uppercase;
+ text-transform: ;
  width: 35%;
  padding: 8px 0;
 }
