--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ h1 {font-family: 'SpotMono', "Courier New", Courier, "Lucida Sans Typewriter", "
 
 #mailchimp {
  background: #ffffff;
- color: #3D6392;
+ color: blue;
   text-align: center;
 	padding: 20px 15px;
 }
