--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h1 {font-family: 'SpotMono', "Courier New", Courier, "Lucida Sans Typewriter", "
 #mailchimp h2 {
   font-size: 30px;
   line-height: 20px;
+	margin-bottom:20px;
   color:#7e4397;
 	font-family: 'SpotMono', "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 }
@@ -34,7 +35,6 @@ h1 {font-family: 'SpotMono', "Courier New", Courier, "Lucida Sans Typewriter", "
  border: 1px solid #dfdfdf;
  margin-bottom: 10px;
  padding: 8px 10px;
- width: 35%;
  border-radius: 4px;
  -moz-border-radius: 4x;
  -webkit-border-radius: 4px;
