--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+.logo {max-width:100%;}
+
 @font-face {
 	font-family: 'GTWalsheim';
 	src: url('GTWalsheim.eot?#iefix') format('embedded-opentype'), url('GTWalsheim.woff') format('woff'), url('GTWalsheim.ttf') format('truetype'), url('GTWalsheim.svg#GTWalsheim') format('svg');
