--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
-.logo {max-width:100%;}
+@keyframes float {
+	0% {
+		box-shadow: 0 20px 20px rgba(0,0,0,.16);
+		transform: translatey(0px);
+	}
+	50% {
+		box-shadow: 0 25px 15px 0px rgba(0,0,0,0.08);
+		transform: translatey(-12px);
+	}
+	100% {
+		box-shadow: 0 20px 20px rgba(0,0,0,.16);
+		transform: translatey(0px);
+	}
+}
+
+.logo {max-width:100%;transform: translatey(0px);
+	animation: float 5s ease-in-out infinite;}
 
 textarea,
 input.text,
