--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,18 @@ border-radius: 0;
 	font-weight: normal;
 	font-style: normal;
 }
+
+
+@font-face {
+  font-family: 'Graphik-Regular';
+  src: url('Graphik-Regular.eot?#iefix') format('embedded-opentype'),  url('Graphik-Regular.otf')  format('opentype'),
+	     url('Graphik-Regular.woff') format('woff'), url('Graphik-Regular.ttf')  format('truetype'), url('Graphik-Regular.svg#Graphik-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
 * {
 	box-sizing: border-box;
 }
@@ -39,8 +51,8 @@ body {
 	font-size: 1.65rem;
 	font-family: sans-serif;
 	line-height: 150%;
-	font-family: 'GTWalsheim';
-	font-weight: 100;
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 	margin: 0;
 	color: black;
 }
@@ -88,15 +100,17 @@ p {
 h2 {
 	font-size: 2.1rem;
 	line-height: 125%;
-	font-family: 'GTWalsheim';
-	font-weight: 100;
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 	margin: 0;
 	color: black;
 	margin-bottom: 40px;
 }
 h5 {
-	font-weight: 100;
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 	font-size: 1rem;
+	
 }
 #content {
 	max-width: 720px;
@@ -126,7 +140,8 @@ article {
 h1 {
 	font-size: 4.75rem;
 	margin: 0 0 0.75rem 0;
-	font-family: Cooper Blk BT;
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 	line-height: 90%;
 	color: blue;
 }
@@ -143,25 +158,29 @@ h1 {
 	font-size: 18px;
 	margin-bottom: 10px;
 	padding: 20px;
-	font-family: 'GTWalsheim';
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 	border: 1px solid #d2d2d2;
 }
 #mailchump input.email:focus {}
 #mailchimp input.email {
 	max-width:90%;
-	font-family: 'GTWalsheim';
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 	background: #fff;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.09), 0 6px 6px rgba(0, 0, 0, 0.09);
 }
 #mailchimp input.name {
-	font-family: 'GTWalsheim';
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 	background: #fff
 }
 #mailchimp input[type="submit"] {
 	max-width: 90%;
 	background: blue;
 	color: #fff;
-	font-family: 'GTWalsheim';
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 	cursor: pointer;
 	font-size: 18px;
 	text-transform: ;
@@ -171,7 +190,8 @@ h1 {
 }
 ::-webkit-input-placeholder {
 	color: gray;
-	font-family: 'GTWalsheim';
+	font-family: 'Graphik-Regular';
+	font-weight: normal;
 }
 @media (max-width: 960px) {
 	#content {
