--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,6 @@ input[type="submit"],
 border-radius: 0;
 }
 
-@font-face {
-	font-family: 'GTWalsheim';
-	src: url('GTWalsheim.eot?#iefix') format('embedded-opentype'), url('GTWalsheim.woff') format('woff'), url('GTWalsheim.ttf') format('truetype'), url('GTWalsheim.svg#GTWalsheim') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
 
 @font-face {
   font-family: 'Graphik-Regular';
@@ -45,6 +38,101 @@ border-radius: 0;
   font-style: normal;
 }
 
+
+@font-face {
+  font-family: 'ProductSans-Bold';
+  src: url('ProductSans-Bold.eot?#iefix') format('embedded-opentype'),  url('ProductSans-Bold.woff') format('woff'), url('ProductSans-Bold.ttf')  format('truetype'), url('ProductSans-Bold.svg#ProductSans-Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+h4 {font-family:  'ProductSans-Bold';font-size: 2.4rem;color: blue;line-height: 92%;text-align: center;}
+
+.fade-in-1 {
+    opacity: 0;
+    animation: fadeIn ease-in 1;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
+    animation-delay: .5s;
+}
+
+.fade-in-2 {
+    opacity: 0;
+    animation: fadeIn ease-in 1;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
+    animation-delay: 1s;
+}
+
+.fade-in-3 {
+    opacity: 0;
+    animation: fadeIn ease-in 1;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
+    animation-delay: 1.5s;
+}
+
+.fade-in-4 {
+    opacity: 0;
+    animation: fadeIn ease-in 1;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
+    animation-delay: 2s;
+}
+
+.fade-in-5 {
+    opacity: 0;
+    animation: fadeIn ease-in 1;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
+    animation-delay: 2.5s;
+}
+
+
+@keyframes fadeIn{
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
 
 
 * {
