--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,14 @@ h4 {font-family:  'ProductSans-Bold';font-size: 2.4rem;color: blue;line-height: 
     animation-delay: 2.5s;
 }
 
+.fade-in-6 {
+    opacity: 0;
+    animation: fadeIn ease-in 1;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
+    animation-delay: 2.8s;
+}
+
 
 @keyframes fadeIn{
   0% {
@@ -185,7 +193,6 @@ p {
 #branding {
 	margin: auto;
 	margin-top: 48px;
-	margin-bottom: 24px;
 }
 h2 {
 	font-size: 2.1rem;
