--- a/style.css
+++ b/style.css
@@ -7,6 +7,72 @@
   }
 }
 
+
+.folioLink {padding: 0px;background-color: white;border: none;text-decoration: underline;}
+
+.container {
+  position: relative; // needed to position absolute #nav 
+  min-height: 100%; // needed for a 100% height overlay of #nav
+  overflow: hidden; // idem
+  padding: 1em;
+  color:black;
+}
+
+#nav {
+  display: none;
+  z-index: 999; 
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  color: white;
+  background-color: white;
+  padding-left: 40%;
+  padding-top: 32px;
+  padding-bottom:32px;
+  padding-right: 32px; 
+  overflow-y: scroll;
+  text-align: ;
+  padding-left:40%!important;
+
+}
+
+#nav.menu-open {
+  display: block;
+  
+}
+
+#open:hover{color:red;transition: color 0.5s ease;}
+#close:hover{color:red;transition: color 0.5s ease;}
+#open,
+#close {
+  cursor: pointer;
+bottom: 0;left: 0;position: fixed;padding: 16px;font-size: 20px; color:lightcoral;
+text-decoration: underline;transition: color 0.5s ease;
+
+
+
+}
+
+#close {background-color: white;filter:blur(0px);backdrop-filter: blur(2px);backdrop-filter: opacity(20%);}
+
+.menu-label {
+  margin-right: 0.5em;
+}
+
+
+#open.menu-open {
+  visibility: hidden; // only needed when you use a transparent background for #nav
+}
+
+
+
+
+
+
+
   
 
 body.light-mode {
@@ -84,8 +150,22 @@ a.links:hover{opacity: 1;  transition: color 0.5s ease;
 }
 
 @media all and (max-width: 740px) {
-  body.dark-mode {font-size: 1.4rem;} body.light-mode {font-size: 1.2rem;} #getportfolio{margin-top: -25%;} #sitename {font-size:21px;}
-   #credit {font-size:21px;}  #social {font-size:21px;}  #submit {font-size:21px;}
-  
-  
+  body {font-size: 1.4rem;} #getportfolio{margin-top: -25%;}
+  #nav {
+ 
+  overflow-y: scroll;
+  padding-left: 16px!important;
+
+
+}
+#close {
+  width: 100%;
+bottom: 0;left: 0;position: fixed;padding: 16px;font-size: 20px; color:lightcoral;
+text-decoration: underline;transition: color 0.5s ease;
+background-color:rgba(255, 255, 255, 0.9)
+
+
+
+}
+
 }
