--- a/views/folios.html
+++ b/views/folios.html
@@ -1,4 +1,12 @@
- <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
+<head>
+ <link rel="stylesheet" type="text/css" href="../style.css">
+<script type="text/javascript" src="../js/folios.js"></script>
+<script type="text/javascript" src="../js/colours.js"></script>
+</head>
+
+
+
+<a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
   <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
     <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
