--- a/style.css
+++ b/style.css
@@ -150,6 +150,13 @@ a.links:hover{opacity: 1;  transition: color 0.5s ease;
 }
 
 @media all and (max-width: 740px) {
+  
+  body.light-mode {
+    font-size: 1.4rem;
+  }
+  body.dark-mode {
+    font-size: 1.4rem;
+  }
   body {font-size: 1.2rem;} #getportfolio{margin-top: -25%;}
   #nav {
  
