--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   }
 }
 
+.updatedOn {
+  color:black; text-decoration:none!important;border:none;background-color:white;padding:0px;
+}
+
 
 .folioLink {padding: 0px;background-color: white;border: none;text-decoration: underline;}
 
