--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .updatedOn {
-  color:black; text-decoration:none!important;border:none;background-color:white;padding:0px;
+  color:black!important; text-decoration:none!important;border:none!important;background-color:white!important;padding:0px!important;
 }
 
 
