--- a/views/folios.html
+++ b/views/folios.html
@@ -5,7 +5,7 @@
 </head>
 
 
-<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20 by @kimw</a>
+<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>
 <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
   <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
