--- a/views/folios.html
+++ b/views/folios.html
@@ -2,40 +2,26 @@
  <link rel="stylesheet" type="text/css" href="../style.css">
 <script type="text/javascript" src="../js/folios.js"></script>
 <script type="text/javascript" src="../js/colours.js"></script>
-</head>
-
-
+</head>   
+     
 <a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>
-<a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-  <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-   <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-     <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-       <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-        <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-         <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-  <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-   <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-     <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-       <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-        <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-         <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-  <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-   <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-     <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-       <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-        <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-         <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-  <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-   <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-     <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-       <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-        <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Test Attribute</a>
-        
+<a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a>
+<a class="folioLink" href="adamho.com/" target="_blank">Adam Ho</a>
+ <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
+<a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a>
+<a class="folioLink" href="https://studiofrank.co" target="_blank">Frank Chimero</a>
+<a class="folioLink" href="https://stanleychen.info/" target="_blank">Stanley Chen</a>
+<a class="folioLink" href="https://michael.wang/" target="_blank">Michael Wang</a>
+<a class="folioLink" href="https://erichu.info/" target="_blank">Eric Hu</a>
+<a class="folioLink" href="https://sspeier.com/" target="_blank">Sebastian Speier</a>
+<a class="folioLink" href="https://elirousso.com/" target="_blank">Eli Rousso</a>
+<a class="folioLink" href="https://kyledecker.me" target="_blank">Kyle Decker</a>
+ <a class="folioLink" href="https://zefs.website/" target="_blank">Zef Cherry</a>
+   <a class="folioLink" href="https://sharypin.cool/" target="_blank">Denis Sharypin</a>
+   <a class="folioLink" href="https://coryetzkorn.com/" target="_blank">Cory Etzkorn</a>
+   <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
+<a class="folioLink" href="https://timroussilhe.com/" target="_blank">Tim Roussilhe</a>
+<a class="folioLink" href="https://karalevich.com" target="_blank">Maksim Karalevich</a>
+<a class="folioLink" href="https://twnsnd.co" target="_blank">Cole Townsend</a>
+  
+  
