--- a/views/folios.html
+++ b/views/folios.html
@@ -8,6 +8,7 @@
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a>
 <a class="folioLink" href="adamho.com/" target="_blank">Adam Ho</a>
  <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
+<a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a>
 <a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a>
 <a class="folioLink" href="https://studiofrank.co" target="_blank">Frank Chimero</a>
 <a class="folioLink" href="https://stanleychen.info/" target="_blank">Stanley Chen</a>
@@ -15,13 +16,26 @@
 <a class="folioLink" href="https://erichu.info/" target="_blank">Eric Hu</a>
 <a class="folioLink" href="https://sspeier.com/" target="_blank">Sebastian Speier</a>
 <a class="folioLink" href="https://elirousso.com/" target="_blank">Eli Rousso</a>
+<a class="folioLink" href="https://jeongsteph.design/" target="_blank">Steph Jeong</a>
 <a class="folioLink" href="https://kyledecker.me" target="_blank">Kyle Decker</a>
  <a class="folioLink" href="https://zefs.website/" target="_blank">Zef Cherry</a>
+ <a class="folioLink" href="https://neal.fun/" target="_blank">Neal Agarwal</a>
    <a class="folioLink" href="https://sharypin.cool/" target="_blank">Denis Sharypin</a>
    <a class="folioLink" href="https://coryetzkorn.com/" target="_blank">Cory Etzkorn</a>
+<a class="folioLink" href="https://katiforner.com/" target="_blank">Kati Forner</a>
    <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
 <a class="folioLink" href="https://timroussilhe.com/" target="_blank">Tim Roussilhe</a>
 <a class="folioLink" href="https://karalevich.com" target="_blank">Maksim Karalevich</a>
 <a class="folioLink" href="https://twnsnd.co" target="_blank">Cole Townsend</a>
-  
-  
+<a class="folioLink" href="https://liebermannkiepe.de/en" target="_blank"> Liebermann Kiepe Reddemann </a>
+<a class="folioLink" href="https://christianmezofi.com/" target="_blank">Christian Mezöfi</a>
+<a class="folioLink" href="https://www.angel-estrada.com/" target="_blank">Angel Estrada</a>
+<a class="folioLink" href="https://narrowdesign.com/" target="_blank">Nick Jones</a>
+<a class="folioLink" href="https://justified.studio/" target="_blank">Justified Studio</a>
+<a class="folioLink" href="http://davidpolonia.com/" target="_blank">David Polonia</a>
+<a class="folioLink" href="http://nathanyoung.org/" target="_blank">Nathan Young</a>
+<a class="folioLink" href="https://victor.work/" target="_blank">Victor Costa</a>
+<a class="folioLink" href="https://niklasrosen.se/" target="_blank">Niklas Rosén</a>
+<a class="folioLink" href="http://matthieuteyssandier.com/" target="_blank">Matthieu Teyssandier</a>
+<a class="folioLink" href="https://angelamilosevic.com/" target="_blank">Angela Milosevic</a>
+<a class="folioLink" href="https://www.calebbarclay.com/" target="_blank">Caleb Barclay</a>
