--- a/views/folios.html
+++ b/views/folios.html
@@ -6,7 +6,7 @@
      
 <a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a>
-<a class="folioLink" href="adamho.com/" target="_blank">Adam Ho</a>
+<a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a>
  <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
 <a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a>
 <a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a>
