--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ a:active {
     a.sitename:hover {color:#1a99d6;}
 
   a.credit {color:lightcoral;}
-  a.credit:hover {color: #ff588d;}
+  a.credit:hover {color: indianred;}
   a.submit {color:orange;}
   a.submit:hover {color: #ff4d01;}
   a.social {color:mediumseagreen;}
