--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 }
 
 
-a.folioLink {opacity:1; padding: 0px;background-color: white;border: none;text-decoration: underline;opacity 0.5s ease;}
-a.folioLink:hover {opacity:.7; color:black;background-color:white;padding:0px;border:none;opacity 0.5s ease;}
+a.folioLink {padding: 0px;background: white;border: none;text-decoration: underline;transition: background 0.5s ease;}
+a.folioLink:hover {color:black;background:#3a3939;padding:0px;border:none;transition: background 0.5s ease;}
 
 .container {
   position: relative; // needed to position absolute #nav 
