--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .updatedOn {
-  color:black!important; text-decoration:none!important;border:none!important;background-color:white!important;padding:0px!important;
+  color:#3a3939!important; text-decoration:none!important;border:none!important;background-color:white!important;padding:0px!important;
 }
 
 
