--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .updatedOn {
-  color:#3a3939!important; text-decoration:none!important;border:none!important;background-color:white!important;padding:0px!important;
+  cursor:none; color:#3a3939!important; text-decoration:none!important;border:none!important;background-color:white!important;padding:0px!important;
 }
 
 
@@ -156,6 +156,11 @@ a.links:hover{opacity: 1;  transition: color 0.5s ease;
 }
 
 @media all and (max-width: 740px) {
+  
+  #sitename {font-size: 24px;}
+#credit {font-size: 24px;}
+  #submit {font-size: 24px;}
+  #social {font-size: 24px;}
   
   #nav {font-size:2rem;}
   
