--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ a.links:hover{opacity: 1;  transition: color 0.5s ease;
 
 
 }
+  #open {font-size: 26px;}
 #close {
   width: 100%;
 bottom: 0;left: 0;position: fixed;padding: 16px;font-size: 26px; color:lightcoral;
