--- a/views/folios.html
+++ b/views/folios.html
@@ -39,3 +39,13 @@
 <a class="folioLink" href="http://matthieuteyssandier.com/" target="_blank">Matthieu Teyssandier</a>
 <a class="folioLink" href="https://angelamilosevic.com/" target="_blank">Angela Milosevic</a>
 <a class="folioLink" href="https://www.calebbarclay.com/" target="_blank">Caleb Barclay</a>
+<a class="folioLink" href="https://www.lizvwells.com/" target="_blank">Liz Wells</a>
+<a class="folioLink" href="https://biron.io/" target="_blank">Chris Biron</a>
+<a class="folioLink" href="http://actualidea.com/" target="_blank">Michael Pangilinan</a>
+<a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a>
+<a class="folioLink" href="https://soulwire.co.uk/" target="_blank">Justin Windle</a>
+
+
+
+
+
