--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a.folioLink:hover {color:black;background:#3a3939;padding:0px;border:none;transi
   color:black;
 }
 
-#nav {
+#nav {text-align:right;
   font-size:3rem;
   display: none;
   z-index: 999; 
@@ -162,7 +162,7 @@ a.links:hover{opacity: 1;  transition: color 0.5s ease;
   #submit {font-size: 26px;}
   #social {font-size: 26px;}
   
-  #nav {font-size:2rem;}
+  #nav {font-size:2rem;text-align:left;}
   
   body.light-mode {
     font-size: 1.4rem;
