--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   }
 }
 
+.toggle {
+  opacity: 0.2;
+}
+
 .updatedOn {
   cursor:default; color:#3a3939!important; text-decoration:none!important;border:none!important;background-color:white!important;padding:0px!important;
 }
