--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@
   }
 }
 
-.toggle {
-  opacity: 0.2;
+.hover {
+    zoom: 1;
+    filter: alpha(opacity = 50);
+    opacity: 0.5;
 }
-
 .updatedOn {
   cursor:default; color:#3a3939!important; text-decoration:none!important;border:none!important;background-color:white!important;padding:0px!important;
 }
