--- a/views/folios.html
+++ b/views/folios.html
@@ -45,6 +45,16 @@
 <a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a>
 <a class="folioLink" href="https://soulwire.co.uk/" target="_blank">Justin Windle</a>
 
+<script type="text/javascript">
+$('folioLink').mouseover(function () {
+    $('folioLink').not($(this)).addClass('hover');
+});
+
+$('folioLink').mouseout(function () {
+    $('folioLink').not($(this)).removeClass('hover');
+});
+    </script>
+
 
 
 
