--- a/views/folios.html
+++ b/views/folios.html
@@ -2,6 +2,7 @@
  <link rel="stylesheet" type="text/css" href="../style.css">
 <script type="text/javascript" src="../js/folios.js"></script>
 <script type="text/javascript" src="../js/colours.js"></script>
+ <script type="text/javascript" src="../js/hover.js"></script>
 </head>   
      
 <a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>
@@ -44,18 +45,4 @@
 <a class="folioLink" href="http://actualidea.com/" target="_blank">Michael Pangilinan</a>
 <a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a>
 <a class="folioLink" href="https://soulwire.co.uk/" target="_blank">Justin Windle</a>
-
-<script type="text/javascript">
-$('folioLink').mouseover(function () {
-    $('folioLink').not($(this)).addClass('hover');
-});
-
-$('folioLink').mouseout(function () {
-    $('folioLink').not($(this)).removeClass('hover');
-});
-    </script>
-
-
-
-
 
