--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@
   }
 }
 
-.hover {
-    zoom: 1;
-    filter: alpha(opacity = 50);
-    opacity: 0.5;
+.toggle {
+  opacity: 0.7;
 }
+
 .updatedOn {
   cursor:default; color:#3a3939!important; text-decoration:none!important;border:none!important;background-color:white!important;padding:0px!important;
 }
