--- a/views/folios.html
+++ b/views/folios.html
@@ -45,3 +45,9 @@
 <a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a>
 <a class="folioLink" href="https://soulwire.co.uk/" target="_blank">Justin Windle</a>
 
+
+<script type="text/javascript">
+$('a.folioLink').hover(function(){
+ $('a.folioLink').not(this).toggleClass('toggle');
+})
+        </script>
