--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .toggle {
-  opacity: 0.7;
+  opacity: 0.0;
 }
 
 .updatedOn {
@@ -16,8 +16,8 @@
 }
 
 
-a.folioLink {padding: 0px;background: white;border: none;text-decoration: underline;transition: background 0.3s ease;}
-a.folioLink:hover {color:black;background:#3a3939;padding:0px;border:none;transition: background 0.3s ease;}
+a.folioLink {padding: 0px;background: white;border: none;text-decoration: underline;}
+a.folioLink:hover {color:black;background:white;padding:0px;border:none;}
 
 .container {
   position: relative; // needed to position absolute #nav 
