--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .toggle {
   opacity: 0.0;
-  transition: opacity 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .updatedOn {
@@ -17,7 +17,7 @@
 }
 
 
-a.folioLink {padding: 0px;background: white;border: none;text-decoration: underline;opacity:1;}
+a.folioLink {padding: 0px;background: white;border: none;text-decoration: underline;}
 a.folioLink:hover {color:black;background:white;padding:0px;border:none;opacity:1;}
 
 .container {
