--- a/views/folios.html
+++ b/views/folios.html
@@ -7,6 +7,7 @@
 <a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a>
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a>
+<a class="folioLink" href="http://www.timothyachumba.com/" target="_blank">Timothy Achumba</a>
  <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
 <a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a>
 <a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a>
@@ -44,7 +45,21 @@
 <a class="folioLink" href="http://actualidea.com/" target="_blank">Michael Pangilinan</a>
 <a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a>
 <a class="folioLink" href="https://soulwire.co.uk/" target="_blank">Justin Windle</a>
-
+<a class="folioLink" href="https://taragraphy.com/" target="_blank">Artëm Tarasov</a>
+<a class="folioLink" href="http://rumz.org/" target="_blank">Rumsey Taylor</a>
+<a class="folioLink" href="https://jeanlou.co/" target="_blank">Jean-Lou Renoux</a>
+<a class="folioLink" href="https://jonasf.work/" target="_blank">Jonas Folletête</a>
+<a class="folioLink" href="http://dmcg.co/" target="_blank">David McGillivray</a>
+<a class="folioLink" href="https://nickytes.la/" target="_blank">Nicky Tesla</a>
+<a class="folioLink" href="https://heckhouse.com/" target="_blank">Bethany Heck</a>
+<a class="folioLink" href="https://maryloufaure.com/" target="_blank">Marylou Faure</a>
+<a class="folioLink" href="https://florianmarkl.com/en/" target="_blank">Atelier Florian Markl</a>
+<a class="folioLink" href="http://florentbiffi.com/" target="_blank">Florent Biffi</a>
+<a class="folioLink" href="https://undersight.co/" target="_blank">Eduardo Nunes</a>
+<a class="folioLink" href="https://samucoronado.com/" target="_blank">Samuel Coronado</a>
+<a class="folioLink" href="https://thomaswilliams.co/" target="_blank">Thomas Williams</a>
+<a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a>
+<a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a>
 
 <script type="text/javascript">
 $('a.folioLink').hover(function(){
