--- a/views/folios.html
+++ b/views/folios.html
@@ -11,6 +11,7 @@
  <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
 <a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a>
 <a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a>
+<a class="folioLink" href="https://www.janieceallison.design/" target="_blank">Janiece Allison</a>
 <a class="folioLink" href="https://studiofrank.co" target="_blank">Frank Chimero</a>
 <a class="folioLink" href="https://stanleychen.info/" target="_blank">Stanley Chen</a>
 <a class="folioLink" href="https://michael.wang/" target="_blank">Michael Wang</a>
