--- a/style.css
+++ b/style.css
@@ -162,6 +162,38 @@ a.links  {cursor: pointer;
 a.links:hover{opacity: 1;  transition: color 0.5s ease;
 }
 
+@media screen and (min-width: 1500px) {
+  body.light-mode {
+ 
+  font-size: 2.7rem;
+
+}
+
+body.dark-mode {
+
+  font-size: 3rem;
+
+
+}
+
+  
+  #sitename {font-size: 36px;}
+#credit {font-size: 36px;}
+  #submit {font-size: 36px;}
+  #social {font-size: 36px;}
+
+  #open {font-size: 36px;}
+#close {font-size: 36px;}
+
+#nav {
+  font-size: 3.8rem;
+}
+
+}
+
+
+
+
 @media all and (max-width: 740px) {
   
   
@@ -192,6 +224,7 @@ a.links:hover{opacity: 1;  transition: color 0.5s ease;
 
 
 }
+  
   #open {font-size: 26px;}
 #close {
   width: 100%;
