--- a/views/folios.html
+++ b/views/folios.html
@@ -1,14 +1,18 @@
+<!DOCTYPE html>
+<html lang ="en">
 <head>
- <link rel="stylesheet" type="text/css" href="../style.css">
-<script type="text/javascript" src="../js/folios.js"></script>
-<script type="text/javascript" src="../js/colours.js"></script>
+<meta charset="UTF-8">
+<title>Portfolios</title>
+<link rel="stylesheet" type="text/css" href="../style.css">
+<script src="../js/folios.js"></script>
+<script src="../js/colours.js"></script>
 </head>   
      
 <a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a>
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a>
 <a class="folioLink" href="http://www.timothyachumba.com/" target="_blank">Timothy Achumba</a>
- <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
+<a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
 <a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a>
 <a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a>
 <a class="folioLink" href="https://www.janieceallison.design/" target="_blank">Janiece Allison</a>
@@ -20,12 +24,12 @@
 <a class="folioLink" href="https://elirousso.com/" target="_blank">Eli Rousso</a>
 <a class="folioLink" href="https://jeongsteph.design/" target="_blank">Steph Jeong</a>
 <a class="folioLink" href="https://kyledecker.me" target="_blank">Kyle Decker</a>
- <a class="folioLink" href="https://zefs.website/" target="_blank">Zef Cherry</a>
- <a class="folioLink" href="https://neal.fun/" target="_blank">Neal Agarwal</a>
-   <a class="folioLink" href="https://sharypin.cool/" target="_blank">Denis Sharypin</a>
-   <a class="folioLink" href="https://coryetzkorn.com/" target="_blank">Cory Etzkorn</a>
+<a class="folioLink" href="https://zefs.website/" target="_blank">Zef Cherry</a>
+<a class="folioLink" href="https://neal.fun/" target="_blank">Neal Agarwal</a>
+<a class="folioLink" href="https://sharypin.cool/" target="_blank">Denis Sharypin</a>
+<a class="folioLink" href="https://coryetzkorn.com/" target="_blank">Cory Etzkorn</a>
 <a class="folioLink" href="https://katiforner.com/" target="_blank">Kati Forner</a>
-   <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
+<a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
 <a class="folioLink" href="https://timroussilhe.com/" target="_blank">Tim Roussilhe</a>
 <a class="folioLink" href="https://karalevich.com" target="_blank">Maksim Karalevich</a>
 <a class="folioLink" href="https://twnsnd.co" target="_blank">Cole Townsend</a>
@@ -62,7 +66,7 @@
 <a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a>
 <a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a>
 
-<script type="text/javascript">
+<script>
 $('a.folioLink').hover(function(){
  $('a.folioLink').not(this).toggleClass('toggle');
 })
