--- a/views/folios.html
+++ b/views/folios.html
@@ -8,6 +8,7 @@
 <script src="../js/colours.js"></script>
 </head>   
      
+     <div id="folioLinks">
 <a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a>
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a>
@@ -65,9 +66,25 @@
 <a class="folioLink" href="https://thomaswilliams.co/" target="_blank">Thomas Williams</a>
 <a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a>
 <a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a>
-
+     </div>
 <script>
 $('a.folioLink').hover(function(){
  $('a.folioLink').not(this).toggleClass('toggle');
 })
         </script>
+
+     
+     <script>
+              var array = $("#folioLinks").children().toArray();
+    var i = array.length,
+        j, temp;
+    while (--i) {
+        j = Math.floor(Math.random() * (i + 1));
+        temp = array[i];
+        array[i] = array[j];
+        array[j] = temp;
+    }
+    
+    $("#folioLinks").append(array);
+          
+     </script>
