--- a/views/folios.html
+++ b/views/folios.html
@@ -8,8 +8,8 @@
 <script src="../js/colours.js"></script>
 </head>   
      
-     <div id="folioLinks">
-<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>
+  
+<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>   <span id="folioLinks">
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a>
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a>
 <a class="folioLink" href="http://www.timothyachumba.com/" target="_blank">Timothy Achumba</a>
@@ -66,7 +66,7 @@
 <a class="folioLink" href="https://thomaswilliams.co/" target="_blank">Thomas Williams</a>
 <a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a>
 <a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a>
-     </div>
+     </span>
 <script>
 $('a.folioLink').hover(function(){
  $('a.folioLink').not(this).toggleClass('toggle');
