--- a/views/folios.html
+++ b/views/folios.html
@@ -9,63 +9,64 @@
 </head>   
      
   
-<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>   <span id="folioLinks">
-<a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a>
-<a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a>
-<a class="folioLink" href="http://www.timothyachumba.com/" target="_blank">Timothy Achumba</a>
-<a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
-<a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a>
-<a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a>
-<a class="folioLink" href="https://www.janieceallison.design/" target="_blank">Janiece Allison</a>
-<a class="folioLink" href="https://studiofrank.co" target="_blank">Frank Chimero</a>
-<a class="folioLink" href="https://stanleychen.info/" target="_blank">Stanley Chen</a>
-<a class="folioLink" href="https://michael.wang/" target="_blank">Michael Wang</a>
-<a class="folioLink" href="https://erichu.info/" target="_blank">Eric Hu</a>
-<a class="folioLink" href="https://sspeier.com/" target="_blank">Sebastian Speier</a>
-<a class="folioLink" href="https://elirousso.com/" target="_blank">Eli Rousso</a>
-<a class="folioLink" href="https://jeongsteph.design/" target="_blank">Steph Jeong</a>
-<a class="folioLink" href="https://kyledecker.me" target="_blank">Kyle Decker</a>
-<a class="folioLink" href="https://zefs.website/" target="_blank">Zef Cherry</a>
-<a class="folioLink" href="https://neal.fun/" target="_blank">Neal Agarwal</a>
-<a class="folioLink" href="https://sharypin.cool/" target="_blank">Denis Sharypin</a>
-<a class="folioLink" href="https://coryetzkorn.com/" target="_blank">Cory Etzkorn</a>
-<a class="folioLink" href="https://katiforner.com/" target="_blank">Kati Forner</a>
-<a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a>
-<a class="folioLink" href="https://timroussilhe.com/" target="_blank">Tim Roussilhe</a>
-<a class="folioLink" href="https://karalevich.com" target="_blank">Maksim Karalevich</a>
-<a class="folioLink" href="https://twnsnd.co" target="_blank">Cole Townsend</a>
-<a class="folioLink" href="https://liebermannkiepe.de/en" target="_blank"> Liebermann Kiepe Reddemann</a>
-<a class="folioLink" href="https://christianmezofi.com/" target="_blank">Christian Mezöfi</a>
-<a class="folioLink" href="https://www.angel-estrada.com/" target="_blank">Angel Estrada</a>
-<a class="folioLink" href="https://narrowdesign.com/" target="_blank">Nick Jones</a>
-<a class="folioLink" href="https://justified.studio/" target="_blank">Justified Studio</a>
-<a class="folioLink" href="http://davidpolonia.com/" target="_blank">David Polonia</a>
-<a class="folioLink" href="http://nathanyoung.org/" target="_blank">Nathan Young</a>
-<a class="folioLink" href="https://victor.work/" target="_blank">Victor Costa</a>
-<a class="folioLink" href="https://niklasrosen.se/" target="_blank">Niklas Rosén</a>
-<a class="folioLink" href="http://matthieuteyssandier.com/" target="_blank">Matthieu Teyssandier</a>
-<a class="folioLink" href="https://angelamilosevic.com/" target="_blank">Angela Milosevic</a>
-<a class="folioLink" href="https://www.calebbarclay.com/" target="_blank">Caleb Barclay</a>
-<a class="folioLink" href="https://www.lizvwells.com/" target="_blank">Liz Wells</a>
-<a class="folioLink" href="https://biron.io/" target="_blank">Chris Biron</a>
-<a class="folioLink" href="http://actualidea.com/" target="_blank">Michael Pangilinan</a>
-<a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a>
-<a class="folioLink" href="https://soulwire.co.uk/" target="_blank">Justin Windle</a>
-<a class="folioLink" href="https://taragraphy.com/" target="_blank">Artëm Tarasov</a>
-<a class="folioLink" href="http://rumz.org/" target="_blank">Rumsey Taylor</a>
-<a class="folioLink" href="https://jeanlou.co/" target="_blank">Jean-Lou Renoux</a>
-<a class="folioLink" href="https://jonasf.work/" target="_blank">Jonas Folletête</a>
-<a class="folioLink" href="http://dmcg.co/" target="_blank">David McGillivray</a>
-<a class="folioLink" href="https://nickytes.la/" target="_blank">Nicky Tesla</a>
-<a class="folioLink" href="https://heckhouse.com/" target="_blank">Bethany Heck</a>
-<a class="folioLink" href="https://maryloufaure.com/" target="_blank">Marylou Faure</a>
-<a class="folioLink" href="https://florianmarkl.com/en/" target="_blank">Atelier Florian Markl</a>
-<a class="folioLink" href="http://florentbiffi.com/" target="_blank">Florent Biffi</a>
-<a class="folioLink" href="https://undersight.co/" target="_blank">Eduardo Nunes</a>
-<a class="folioLink" href="https://samucoronado.com/" target="_blank">Samuel Coronado</a>
-<a class="folioLink" href="https://thomaswilliams.co/" target="_blank">Thomas Williams</a>
-<a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a>
-<a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a>
+<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>   
+<span id="folioLinks">
+<a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a> 
+<a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a> 
+<a class="folioLink" href="http://www.timothyachumba.com/" target="_blank">Timothy Achumba</a> 
+<a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a> 
+<a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a> 
+<a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a> 
+<a class="folioLink" href="https://www.janieceallison.design/" target="_blank">Janiece Allison</a> 
+<a class="folioLink" href="https://studiofrank.co" target="_blank">Frank Chimero</a> 
+<a class="folioLink" href="https://stanleychen.info/" target="_blank">Stanley Chen</a> 
+<a class="folioLink" href="https://michael.wang/" target="_blank">Michael Wang</a> 
+<a class="folioLink" href="https://erichu.info/" target="_blank">Eric Hu</a> 
+<a class="folioLink" href="https://sspeier.com/" target="_blank">Sebastian Speier</a> 
+<a class="folioLink" href="https://elirousso.com/" target="_blank">Eli Rousso</a> 
+<a class="folioLink" href="https://jeongsteph.design/" target="_blank">Steph Jeong</a> 
+<a class="folioLink" href="https://kyledecker.me" target="_blank">Kyle Decker</a> 
+<a class="folioLink" href="https://zefs.website/" target="_blank">Zef Cherry</a> 
+<a class="folioLink" href="https://neal.fun/" target="_blank">Neal Agarwal</a> 
+<a class="folioLink" href="https://sharypin.cool/" target="_blank">Denis Sharypin</a> 
+<a class="folioLink" href="https://coryetzkorn.com/" target="_blank">Cory Etzkorn</a> 
+<a class="folioLink" href="https://katiforner.com/" target="_blank">Kati Forner</a> 
+<a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a> 
+<a class="folioLink" href="https://timroussilhe.com/" target="_blank">Tim Roussilhe</a> 
+<a class="folioLink" href="https://karalevich.com" target="_blank">Maksim Karalevich</a> 
+<a class="folioLink" href="https://twnsnd.co" target="_blank">Cole Townsend</a> 
+<a class="folioLink" href="https://liebermannkiepe.de/en" target="_blank"> Liebermann Kiepe Reddemann</a> 
+<a class="folioLink" href="https://christianmezofi.com/" target="_blank">Christian Mezöfi</a> 
+<a class="folioLink" href="https://www.angel-estrada.com/" target="_blank">Angel Estrada</a> 
+<a class="folioLink" href="https://narrowdesign.com/" target="_blank">Nick Jones</a> 
+<a class="folioLink" href="https://justified.studio/" target="_blank">Justified Studio</a> 
+<a class="folioLink" href="http://davidpolonia.com/" target="_blank">David Polonia</a> 
+<a class="folioLink" href="http://nathanyoung.org/" target="_blank">Nathan Young</a> 
+<a class="folioLink" href="https://victor.work/" target="_blank">Victor Costa</a> 
+<a class="folioLink" href="https://niklasrosen.se/" target="_blank">Niklas Rosén</a> 
+<a class="folioLink" href="http://matthieuteyssandier.com/" target="_blank">Matthieu Teyssandier</a> 
+<a class="folioLink" href="https://angelamilosevic.com/" target="_blank">Angela Milosevic</a> 
+<a class="folioLink" href="https://www.calebbarclay.com/" target="_blank">Caleb Barclay</a> 
+<a class="folioLink" href="https://www.lizvwells.com/" target="_blank">Liz Wells</a> 
+<a class="folioLink" href="https://biron.io/" target="_blank">Chris Biron</a> 
+<a class="folioLink" href="http://actualidea.com/" target="_blank">Michael Pangilinan</a> 
+<a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a> 
+<a class="folioLink" href="https://soulwire.co.uk/" target="_blank">Justin Windle</a> 
+<a class="folioLink" href="https://taragraphy.com/" target="_blank">Artëm Tarasov</a> 
+<a class="folioLink" href="http://rumz.org/" target="_blank">Rumsey Taylor</a> 
+<a class="folioLink" href="https://jeanlou.co/" target="_blank">Jean-Lou Renoux</a> 
+<a class="folioLink" href="https://jonasf.work/" target="_blank">Jonas Folletête</a> 
+<a class="folioLink" href="http://dmcg.co/" target="_blank">David McGillivray</a> 
+<a class="folioLink" href="https://nickytes.la/" target="_blank">Nicky Tesla</a> 
+<a class="folioLink" href="https://heckhouse.com/" target="_blank">Bethany Heck</a> 
+<a class="folioLink" href="https://maryloufaure.com/" target="_blank">Marylou Faure</a> 
+<a class="folioLink" href="https://florianmarkl.com/en/" target="_blank">Atelier Florian Markl</a> 
+<a class="folioLink" href="http://florentbiffi.com/" target="_blank">Florent Biffi</a> 
+<a class="folioLink" href="https://undersight.co/" target="_blank">Eduardo Nunes</a> 
+<a class="folioLink" href="https://samucoronado.com/" target="_blank">Samuel Coronado</a> 
+<a class="folioLink" href="https://thomaswilliams.co/" target="_blank">Thomas Williams</a> 
+<a class="folioLink" href="https://simon.abranowicz.com/" target="_blank">Simon Abranowicz</a> 
+<a class="folioLink" href="https://maximerimbert.fyi/" target="_blank">Maxime Rimbert</a> 
      </span>
 <script>
 $('a.folioLink').hover(function(){
