--- a/views/folios.html
+++ b/views/folios.html
@@ -75,3 +75,17 @@ $('a.folioLink').hover(function(){
         </script>
 
      
+     <script>
+              var array = $("#folioLinks").children().toArray();
+    var i = array.length,
+        j, temp;
+    while (--i) {
+        j = Math.floor(Math.random() * (i + 1));
+        temp = array[i];
+        array[i] = array[j];
+        array[j] = temp;
+    }
+    
+    $("#folioLinks").append(array);
+          
+     </script>
