--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 
-a.folioLink {padding-top: 0px;padding-left:0px; padding-right: 18px; padding-bottom:0px; background: white;border: none;text-decoration: underline;  transition: all 0.5s ease;
+a.folioLink {padding-top: 0px;padding-left:0px; padding-right: 0x; padding-bottom:0px; background: white;border: none;text-decoration: underline;  transition: all 0.5s ease;
 }
 a.folioLink:hover {color:black;background:white;border:none;opacity:1;  transition: all 0.5s ease;
 }
