--- a/style.css
+++ b/style.css
@@ -7,6 +7,35 @@
   }
 }
 
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .toggle {
   opacity: 0.0;
   transition: all 0.5s ease;
@@ -60,7 +89,11 @@ a.folioLink:hover {color:black;background:white;border:none;opacity:1;  transiti
 #open:hover{color:red;transition: color 0.5s ease;}
 #close:hover{color:red;transition: color 0.5s ease;}
 #open,
-#close {
+#close {    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;
   cursor: pointer;
 bottom: 0;left: 0;position: fixed;padding: 16px;font-size: 32px; color:lightcoral;
 text-decoration: underline;transition: color 0.5s ease;
@@ -137,10 +170,26 @@ a:active {
     border-style: inset;
 }
 
-#sitename {top: 0;left: 0;position: fixed;padding: 16px;font-size: 32px;color: skyblue;}
-#credit {bottom: 0;left: 0;position: fixed;padding: 16px;font-size: 32px; color:lightcoral;}
-  #submit {bottom: 0;right: 0;position: fixed;padding: 16px;font-size: 32px;color:orange;}
-  #social {top: 0;right: 0;position: fixed;padding: 16px;font-size: 32px;color: mediumseagreen;}
+#sitename {top: 0;left: 0;position: fixed;padding: 16px;font-size: 32px;color: skyblue;    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;}
+#credit {bottom: 0;left: 0;position: fixed;padding: 16px;font-size: 32px; color:lightcoral;    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;}
+  #submit {bottom: 0;right: 0;position: fixed;padding: 16px;font-size: 32px;color:orange;    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;}
+  #social {top: 0;right: 0;position: fixed;padding: 16px;font-size: 32px;color: mediumseagreen;    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;}
   
 
   a.sitename {color: skyblue;cursor: cell!important;}
