--- a/views/folios.html
+++ b/views/folios.html
@@ -7,7 +7,7 @@
 <script src="../js/folios.js"></script>
 <script src="../js/colours.js"></script>
 </head>   
-     
+
   
 <a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>   
 <span id="folioLinks">
@@ -16,7 +16,9 @@
 <a class="folioLink" href="http://www.timothyachumba.com/" target="_blank">Timothy Achumba</a> 
 <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a> 
 <a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a> 
-<a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a> 
+<a class="folioLink" href="https://ezekielaquino.com/" target="_blank">Ezekiel Aquino</a> 
+     <a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a> 
+     <a class="folioLink" href="https://phuongnguyen.co/" target="_blank">Phuong Nguyen</a> 
 <a class="folioLink" href="https://www.janieceallison.design/" target="_blank">Janiece Allison</a> 
 <a class="folioLink" href="https://studiofrank.co" target="_blank">Frank Chimero</a> 
 <a class="folioLink" href="https://stanleychen.info/" target="_blank">Stanley Chen</a> 
