--- a/views/folios.html
+++ b/views/folios.html
@@ -9,7 +9,7 @@
 </head>   
 
   
-<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 31.05.20</a>   
+<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 02.06.20</a>   
 <span id="folioLinks">
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a> 
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a> 
@@ -17,8 +17,8 @@
 <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a> 
 <a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a> 
 <a class="folioLink" href="https://ezekielaquino.com/" target="_blank">Ezekiel Aquino</a> 
-     <a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a> 
-     <a class="folioLink" href="https://phuongnguyen.co/" target="_blank">Phuong Nguyen</a> 
+<a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a> 
+<a class="folioLink" href="https://phuongnguyen.co/" target="_blank">Phuong Nguyen</a> 
 <a class="folioLink" href="https://www.janieceallison.design/" target="_blank">Janiece Allison</a> 
 <a class="folioLink" href="https://studiofrank.co" target="_blank">Frank Chimero</a> 
 <a class="folioLink" href="https://stanleychen.info/" target="_blank">Stanley Chen</a> 
@@ -30,6 +30,7 @@
 <a class="folioLink" href="https://kyledecker.me" target="_blank">Kyle Decker</a> 
 <a class="folioLink" href="https://zefs.website/" target="_blank">Zef Cherry</a> 
 <a class="folioLink" href="https://neal.fun/" target="_blank">Neal Agarwal</a> 
+<a class="folioLink" href="https://www.futurefabric.co/" target="_blank">Guy Moorhouse</a> 
 <a class="folioLink" href="https://sharypin.cool/" target="_blank">Denis Sharypin</a> 
 <a class="folioLink" href="https://coryetzkorn.com/" target="_blank">Cory Etzkorn</a> 
 <a class="folioLink" href="https://katiforner.com/" target="_blank">Kati Forner</a> 
