--- a/style.css
+++ b/style.css
@@ -46,9 +46,9 @@
 }
 
 
-a.folioLink {padding-top: 0px;padding-left:0px; padding-right: 0px; padding-bottom:0px; background: white;border: none;text-decoration: underline;  transition: all 0.5s ease;
+a.folioLink {cursor: ne-resize; padding-top: 0px;padding-left:0px; padding-right: 0px; padding-bottom:0px; background: white;border: none;text-decoration: underline;  transition: all 0.5s ease;
 }
-a.folioLink:hover {color:black;background:white;border:none;opacity:1;  transition: all 0.5s ease;
+a.folioLink:hover {cursor: ne-resize; color:black;background:white;border:none;opacity:1;  transition: all 0.5s ease;
 }
 
 .container {
