--- a/views/folios.html
+++ b/views/folios.html
@@ -14,6 +14,7 @@
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a> 
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a> 
 <a class="folioLink" href="http://www.timothyachumba.com/" target="_blank">Timothy Achumba</a> 
+  <a class="folioLink" href="https://day-and.co/" target="_blank">Dayan D’Aniello</a> 
 <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a> 
 <a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a> 
 <a class="folioLink" href="https://ezekielaquino.com/" target="_blank">Ezekiel Aquino</a> 
