--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@
   }
 }
 
+* > .fa-hover-show,
+*:hover > .fa-hover-hidden,
+*:focus > .fa-hover-hidden {
+  display: none;
+}
+*:focus > .fa-hover-show,
+*:hover > .fa-hover-show {
+  display: inline-block;
+}
+
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
