--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 
 * > .fa-hover-show,
 *:hover > .fa-hover-hidden,
-*:focus > .fa-hover-hidden {
+*:focus > .fa-hover-hidden
+*:visited > .fa-hover-hidden {
   display: none;
 }
 *:focus > .fa-hover-show,
