--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 * > .fa-hover-show,
 *:hover > .fa-hover-hidden,
 *:focus > .fa-hover-hidden
-*:visited > .fa-hover-hidden {
+{
   display: none;
 }
 *:focus > .fa-hover-show,
