--- a/style.css
+++ b/style.css
@@ -125,7 +125,11 @@ text-decoration: underline;transition: color 0.5s ease;
 
 
 
-
+body {    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;}
 
 
   
