--- a/views/folios.html
+++ b/views/folios.html
@@ -37,6 +37,7 @@
 <a class="folioLink" href="https://katiforner.com/" target="_blank">Kati Forner</a> 
 <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a> 
 <a class="folioLink" href="https://timroussilhe.com/" target="_blank">Tim Roussilhe</a> 
+  <a class="folioLink" href="  https://www.almond.studio/" target="_blank">Studio Almond</a> 
 <a class="folioLink" href="https://karalevich.com" target="_blank">Maksim Karalevich</a> 
 <a class="folioLink" href="https://twnsnd.co" target="_blank">Cole Townsend</a> 
 <a class="folioLink" href="https://liebermannkiepe.de/en" target="_blank"> Liebermann Kiepe Reddemann</a> 
