--- a/views/folios.html
+++ b/views/folios.html
@@ -10,7 +10,7 @@
 </head>   
 
   
-<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 02.06.20</a>   
+<a class="updatedOn" href="https://twitter.com/@kimw" target="blank">Updated 14.06.20</a>   
 <span id="folioLinks">
 <a class="folioLink" href="https://carolpychan.com/index.html" target="_blank">Carol Chan</a> 
 <a class="folioLink" href="https://adamho.com/" target="_blank">Adam Ho</a> 
@@ -19,7 +19,8 @@
 <a class="folioLink" href="https://taliacotton.com/work" target="_blank">Talia Cotton</a> 
 <a class="folioLink" href="https://kitkatpecson.com/" target="_blank">Kitkat Pecson</a> 
 <a class="folioLink" href="https://ezekielaquino.com/" target="_blank">Ezekiel Aquino</a> 
-<a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a> 
+<a class="folioLink" href="https://www.lenoraporter.com/" target="_blank">Lenora Porter</a> 
+  <a class="folioLink" href="https://nathan.tokyo/" target="_blank">Nathan Taylor</a> 
 <a class="folioLink" href="https://phuongnguyen.co/" target="_blank">Phuong Nguyen</a> 
 <a class="folioLink" href="https://www.janieceallison.design/" target="_blank">Janiece Allison</a> 
 <a class="folioLink" href="https://studiofrank.co" target="_blank">Frank Chimero</a> 
