--- a/views/folios.html
+++ b/views/folios.html
@@ -56,6 +56,7 @@
 <a class="folioLink" href="https://www.calebbarclay.com/" target="_blank">Caleb Barclay</a> 
 <a class="folioLink" href="https://www.lizvwells.com/" target="_blank">Liz Wells</a> 
   <a class="folioLink" href="https://www.mrkylemac.com/" target="_blank">Kyle Mac</a> 
+  <a class="folioLink" href="https://jennywen.ca/" target="_blank">Jenny Wen</a> 
 <a class="folioLink" href="https://biron.io/" target="_blank">Chris Biron</a> 
 <a class="folioLink" href="http://actualidea.com/" target="_blank">Michael Pangilinan</a> 
 <a class="folioLink" href="http://www.colinkeany.com" target="_blank">Colin Keany</a> 
